corpus/baselines/conformance/jsdoc/declarations/jsDeclarationsReusesExistingNodesMappingJSDocTypes.errors.txt
index.js(1,13): error TS1110: Type expected.
index.js(11,14): error TS2322: Type 'null' is not assignable to type 'string | undefined'.
index.js(14,14): error TS2322: Type 'null' is not assignable to type 'string'.
index.js(16,20): error TS1005: '}' expected.
index.js(17,14): error TS2322: Type 'null' is not assignable to type 'Function'.
index.js(19,20): error TS1005: '}' expected.
index.js(20,14): error TS2322: Type 'null' is not assignable to type 'Function'.
index.js(23,14): error TS2322: Type 'null' is not assignable to type 'Record<string, number>'.


==== index.js (8 errors) ====
    /** @type {?} */
                ~
!!! error TS1110: Type expected.
    export const a = null;
    
    /** @type {*} */
    export const b = null;
    
    /** @type {string?} */
    export const c = null;
    
    /** @type {string=} */
    export const d = null;
                 ~
!!! error TS2322: Type 'null' is not assignable to type 'string | undefined'.
    
    /** @type {string!} */
    export const e = null;
                 ~
!!! error TS2322: Type 'null' is not assignable to type 'string'.
    
    /** @type {function(string, number): object} */
                       ~
!!! error TS1005: '}' expected.
    export const f = null;
                 ~
!!! error TS2322: Type 'null' is not assignable to type 'Function'.
    
    /** @type {function(new: object, string, number)} */
                       ~
!!! error TS1005: '}' expected.
    export const g = null;
                 ~
!!! error TS2322: Type 'null' is not assignable to type 'Function'.
    
    /** @type {Object.<string, number>} */
    export const h = null;
                 ~
!!! error TS2322: Type 'null' is not assignable to type 'Record<string, number>'.
    